tests/ui/consts/required-consts/interpret-in-promoted.opt.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/interpret-in-promoted.rs:12:28
   |
LL |     let _x: &'static () = &ub();
   |             -----------    ^^^^ creates a temporary value which is freed while still in use
   |             |
   |             type annotation requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
